# KingClaude

./: .env.example  .gitignore  LAUNCH DASHBOARD.vbs  PUSH TO GITHUB.bat  README.md  SETUP AUTO-START.bat  START AURENTIS.bat  fly.toml  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
scripts/: deploy.sh  setup_droplet.sh
src/: __init__.py  alerts.py  api.py  config.py  database.py  indicators.py  main.py  ml_engine.py  portfolio.py  signals.py  trader.py
src/web/: __init__.py  server.py
src/web/templates/: index.html
systemd/: aurentis-trader.service
tests/: check_imports.py  test_signals.py
