[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "aurentis-trader"
version     = "2.0.0"
description = "Aurentis AI — Paper trading system for Hyperliquid perpetuals"
readme      = "README.md"
requires-python = ">=3.11"
license     = {text = "MIT"}

authors = [
  {name = "Aurentis AI", email = "rea.ai.automations@gmail.com"},
]

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "requests>=2.32",
  "numpy>=1.26",
  "lightgbm>=4.3",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
]

[project.scripts]
aurentis = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
